2007-06-13  Luca Bruno  <lethalman88@gmail.com>

	* Just work on Windows using MinGW

	* syx/syx-interp.c (syx_interp_send_message): if the message is unary don't create an empty array
	(syx_interp_send_super): same
	(syx_interp_send_unary): same

	* syx/syx-parser.h (struct SyxParser): renamed with starting _

	* syx/syx-scheduler.c (syx_scheduler_quit): fixed for now

	* Everything has been documented for Doxygen
	
	* syx/syx-scheduler.c (syx_scheduler_quit): rewrote after GMainLoop has been removed

	* syx/syx-bytecode.c (syx_bytecode_free): free_segment is not needed anymore

	* syx/syx-primitives.c (ArrayedCollection_replaceFromWith): added

	* syx/syx-memory.c (syx_memory_alloc): removed _syx_memory_top
	(syx_memory_init): removed _syx_memory_top and fill _syx_freed_memory_top. Realloc _syx_freed_memory too
	(syx_memory_free_all): removed, we can use syx_memory_clear

2007-06-12  Luca Bruno  <lethalman88@gmail.com>

	* Everything we need to let the Console work men

	* syx/syx-utils.c (_syx_cold_parse_class): if superclass changed, we must update the metaclass too

	* syx/syx-lexer.c (_syx_lexer_token_symbol): fixed, now includes colons

	* tests/*: removed all memory leaks
	
	* st/kernel/Number.st (to:by:do:): added because needed by dictionary hash tables

	* st/kernel/False.st (or:): added

	* st/kernel/True.st (or:): added

	* st/kernel/Dictionary.st: added

	* syx/syx-primitives.c (syx_primitive_at_put): fixed index
	(syx_primitive_at): fixed index

2007-06-11  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-memory.c (syx_memory_init): realloc only if memory must be larger
	(syx_memory_load_image): if we load an image over another one, be sure we free the previous data

	* syx/main.c (main): something new to try out

	* syx/syx-init.c (syx_build_basic): SYX_IS_OBJECT returns FALSE if it's a constant, so we have to set the class ourselves
	(syx_init_basic_streams): removed
	(syx_init_system): added, initialize the system from within Smalltalk itself
