@@ -1,8 +1,0 @@
-SUBDIRS = syx plugins tests
-
-EXTRA_DIST = syx.pc.in st
-
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = syx.pc
-
-DISTCLEANFILES = syx.pc
