@@ -1,5 +1,6 @@
 #include <assert.h>
 #include <stdio.h>
+#include <time.h>
 #include "../syx/syx.h"
 
 int
@@ -8,12 +9,10 @@ main (int argc, char *argv[])
   SyxLexer *lexer;
   SyxOop method;
   SyxParser *parser;
-  GTimer *timer;
-
-  syx_init ("..");
+  clock_t start, end;
+  
+  syx_init (".");
   syx_memory_load_image ("test.sim");
-
-  timer = g_timer_new ();
 
 #define PARSE(text) lexer = syx_lexer_new (text);			\
   method = syx_method_new ();						\
@@ -26,7 +25,7 @@ main (int argc, char *argv[])
 #define NUM_ARGS (SYX_SMALL_INTEGER(SYX_METHOD_ARGUMENTS_COUNT (method)))
 #define NUM_TEMPS (SYX_SMALL_INTEGER(SYX_METHOD_TEMPORARIES_COUNT (method)))
 
-  g_timer_start (timer);
+  start = clock ();
 
   PARSE ("unary");
   assert (SELECTOR_EQ ("unary"));
@@ -51,9 +50,8 @@ main (int argc, char *argv[])
 
   PARSE ("meth 1, 2, 3 test. (1, 2, 3) test");
 
-  g_timer_stop (timer);
-  printf ("Time elapsed: %f\n", g_timer_elapsed (timer, NULL));
-  g_timer_destroy (timer);
+  end = clock ();
+  printf ("Time elapsed: %f\n", ((double) (start - end)) / CLOCKS_PER_SEC);
 
   syx_quit ();
   
