@@ -1,3 +1,9 @@
+2007-06-14  Luca Bruno  <lethalman88@gmail.com>
+
+	* Removed Glib dependency
+
+	* Removed autotools replaced with Scons build system
+
 2007-06-13  Luca Bruno  <lethalman88@gmail.com>
 
 	* Just work on Windows using MinGW
